examples/test/testpolicy15193.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15193
  namespace: namespace459
spec:
  podSelector:
    matchLabels:
      key10: value19
      key48: value18
      key12: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value17
          key21: value11
      podSelector:
        matchLabels:
          key44: value26
          key31: value30
          key35: value46
